--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@ body {
   font-family: "Roboto Mono", monospace;
 }
 
+footer {
+  font-size: 1.2rem;
+  text-align: center;
+  color: white;
+  margin-top: 20px;
+}
+
 .main-content {
   display: grid;
   grid-template-rows: 1fr auto 1fr;
@@ -34,7 +41,7 @@ body {
   text-align: center;
   text-transform: uppercase;
   font-size: 4.8rem;
-  margin-top: 60px;
+  margin-top: 40px;
   background: #121fcf;
   background: linear-gradient(to left, #121fcf 0%, #cf1512 100%);
   -webkit-background-clip: text;
@@ -123,7 +130,6 @@ body {
   height: 70px;
   max-width: 200px;
   padding: 5px 10px 0 10px;
-  background-color: none;
   box-shadow: inset 0px 0px 277px 3px #3f5efb;
   border-radius: 8px;
   text-align: center;
@@ -161,6 +167,11 @@ body {
   opacity: 100%;
 }
 
+.button[disabled] {
+  background-color: rgba(128, 128, 128, 50%);
+  cursor: initial;
+}
+
 .button--restart {
   position: absolute;
   top: 10px;
@@ -185,11 +196,6 @@ body {
 
 .hidden {
   display: none;
-}
-
-.button[disabled] {
-  background-color: rgba(128, 128, 128, 50%);
-  cursor: initial;
 }
 
 .winner-crown {
