--- a/style.css
+++ b/style.css
@@ -103,17 +103,26 @@ a:active {
   margin-left: 10px;
   margin-right: 10px;
   margin-bottom: 20px;
-  padding: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   border-radius: 5px;
 }
 
 .instructions-title {
   padding-bottom: 5px;
-  font-size: 1.6rem;
+  font-size: 2.2rem;
 }
 
 .instructions-text {
-  font-size: 1.5rem;
+  font-size: 2.2rem;
+  line-height: 2;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.hidden {
+  display: none;
 }
 
 .outer-container {
